[package]
name = "bao"
version = "0.1.0"
edition = "2024"
authors = ["Pham Hoang Bao <baopham.201015@gmail.com>"]
description = "A small CLI to open paths in editors and search the web"   # required
license = "MIT OR Apache-2.0"                      # required (SPDX). Pick one or dual.
repository = "https://github.com/Leos0508/bao"     # strongly recommended
readme = "README.md"                               # recommended
keywords = ["cli", "editor", "search"]             # max 5
categories = ["command-line-utilities"]   

[[bin]]
name = "b"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
urlencoding = "2.1.3"
open = "5"
